{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Camera",
            "id": "8054c6ca-0f74-4097-8aa4-bc34b388d369",
            "actions": [
                {
                    "name": "CameraSwitch",
                    "type": "Button",
                    "id": "7a5ec503-1f38-468f-a52c-9c1d0b7466ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FreeLook",
                    "type": "Button",
                    "id": "4d2882fd-c81d-4212-b001-1e82064fc010",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "308af1bd-7210-4a89-8054-abff589a5234",
                    "expectedControlType": "Vector2",
                    "processors": "InvertVector2",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "150c9900-fce4-44d5-9e37-ff79d2215572",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ac312f9-50b9-41c2-8b0d-67923f56fb53",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FreeLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "619877f5-1e34-4452-87ee-927d368a2719",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Movement",
            "id": "eb2b2265-ec13-4b29-b8b9-02a25e5655fb",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "e5e78db6-50dd-46f7-a347-7c802ed11072",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "4b1529fb-af58-424c-aab2-0864532414b6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "92f5bee2-2633-4dd9-819a-84d9c34c449e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4ed4161f-548b-4a24-a6ee-24d168fe5f6e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7fb2fd55-0bb9-48a3-8c48-08aa5f0b2a9a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e65d26d1-cab7-4730-9190-9a4d6eb87131",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c24a2583-695e-4cb7-b884-ad8f74ae3d88",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d3ccbca0-ee39-44e3-90a1-6ae367e7a166",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interact",
            "id": "9f1cb175-1e9c-4869-895b-d811d02e947c",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "80867f2c-6dc9-44d6-a728-1e215fb11630",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1537d2dd-d896-407b-b144-23725b438611",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menus",
            "id": "f255974d-7305-47a1-a48d-f4f9f3331f41",
            "actions": [
                {
                    "name": "ShowBackpack",
                    "type": "Button",
                    "id": "c5ae4970-0ac2-4ae9-bcb6-b784added749",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e80fb935-0afa-477a-9b61-8a0a55f2a720",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowBackpack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Game",
            "id": "7f56cb51-6fa1-4215-99f4-14a8541eafa2",
            "actions": [
                {
                    "name": "Save",
                    "type": "Button",
                    "id": "e2097605-b8ba-4260-8bf0-dceaaf1b3a6c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Load",
                    "type": "Button",
                    "id": "5a293343-0d2a-424e-bdf9-218332950aa1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4d28b2ad-9a38-4cf9-8d12-7bf50fb35b7f",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Save",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb7a565b-77db-4061-acbd-34d071067480",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Load",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "3cd77424-8f13-4f3d-88b3-d6ba9d10ea53",
            "actions": [
                {
                    "name": "Point",
                    "type": "PassThrough",
                    "id": "ec893961-d9c3-48e9-acf9-862734b2df62",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "09e2bf8a-c066-417b-bf2c-f83481bed230",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}